# map_merge_2d

./: CMakeLists.txt  ReadMe.md  package.xml
config/: params.yaml
include/map_merge_2d/: map_merger.hpp
include/map_merge_2d/cv_core/: cv_core.hpp  cv_helpers.hpp
include/map_merge_2d/map_discovery/: topic_discovery.hpp
include/map_merge_2d/submaps/: submap.hpp  submap_matcher.hpp  submap_merger.hpp
include/map_merge_2d/util/: tf_utils.hpp
launch/: ghost_map_merger.launch  map_merge_2d.launch  map_merge_2d.launch.py  plugin.launch
scripts/: latency_mon.py  map_merge_tf_plugin.py
src/: map_merger.cpp  map_merger_node.cpp
src/cv_core/: cv_core.cpp
src/map_discovery/: topic_discovery.cpp
src/submaps/: submap.cpp  submap_matcher.cpp  submap_merger.cpp
src/util/: tf_utils.cpp  topic_name_utils.cpp
